--- a/UICollectionViewDemo/Base.lproj/Main.storyboard
+++ b/UICollectionViewDemo/Base.lproj/Main.storyboard
@@ -22,42 +22,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="z8I-nf-ags">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="z8I-nf-ags">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="667" id="Tvd-PK-ya6"/>
-                                    <constraint firstAttribute="width" constant="375" id="egm-jl-Yfh"/>
-                                </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="9DR-5e-WQj">
-                                    <size key="itemSize" width="350" height="350"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="9DR-5e-WQj">
+                                    <size key="itemSize" width="367" height="301"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="gQG-33-f5V" customClass="CollectionViewCell" customModule="UICollectionViewDemo" customModuleProvider="target">
-                                        <rect key="frame" x="13" y="10" width="350" height="350"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="301"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="350" height="350"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="301"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="toE-gB-Fl0">
-                                                    <rect key="frame" x="0.0" y="0.0" width="351" height="350"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="351" id="MRM-5n-6h8"/>
-                                                        <constraint firstAttribute="height" constant="350" id="aeg-bN-l9i"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="301"/>
                                                 </imageView>
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstAttribute="bottomMargin" secondItem="toE-gB-Fl0" secondAttribute="bottom" constant="-8" id="BdG-0X-Yqo"/>
-                                            <constraint firstItem="toE-gB-Fl0" firstAttribute="top" secondItem="gQG-33-f5V" secondAttribute="topMargin" constant="-8" id="f9Y-kk-EAS"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="toE-gB-Fl0" secondAttribute="trailing" constant="-9" id="lN4-co-LeJ"/>
-                                            <constraint firstItem="toE-gB-Fl0" firstAttribute="leading" secondItem="gQG-33-f5V" secondAttribute="leadingMargin" constant="-8" id="vtH-7y-rja"/>
+                                            <constraint firstAttribute="bottom" secondItem="toE-gB-Fl0" secondAttribute="bottom" id="IDG-Wa-hHB"/>
+                                            <constraint firstItem="toE-gB-Fl0" firstAttribute="top" secondItem="gQG-33-f5V" secondAttribute="top" id="MSx-w8-s6J"/>
+                                            <constraint firstAttribute="trailing" secondItem="toE-gB-Fl0" secondAttribute="trailing" id="dqj-x9-MFj"/>
+                                            <constraint firstItem="toE-gB-Fl0" firstAttribute="leading" secondItem="gQG-33-f5V" secondAttribute="leading" id="w49-MM-x8u"/>
                                         </constraints>
+                                        <size key="customSize" width="375" height="301"/>
                                         <connections>
                                             <outlet property="imageView" destination="toE-gB-Fl0" id="rzh-Ow-Ixl"/>
                                         </connections>
@@ -71,20 +64,57 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="z8I-nf-ags" secondAttribute="bottom" id="Fsw-gQ-RYS"/>
-                            <constraint firstItem="z8I-nf-ags" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Ir0-1e-17u"/>
-                            <constraint firstAttribute="trailing" secondItem="z8I-nf-ags" secondAttribute="trailing" id="vBB-lu-5Bn"/>
-                            <constraint firstItem="z8I-nf-ags" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wzz-E5-m81"/>
+                            <constraint firstItem="z8I-nf-ags" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1w6-Gy-lGp"/>
+                            <constraint firstItem="z8I-nf-ags" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="DZF-en-nNo"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="z8I-nf-ags" secondAttribute="bottom" id="G1s-zb-xeO"/>
+                            <constraint firstAttribute="trailing" secondItem="z8I-nf-ags" secondAttribute="trailing" id="yYo-aC-Yjz"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="fDt-1i-heb"/>
                     <connections>
                         <outlet property="collectionView" destination="z8I-nf-ags" id="pC3-uZ-Hco"/>
+                        <segue destination="25h-pQ-8CH" kind="show" id="cP5-zo-fcb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1056.8" y="123.68815592203899"/>
+        </scene>
+        <!--New View Controller-->
+        <scene sceneID="TTw-F6-TTk">
+            <objects>
+                <viewController id="25h-pQ-8CH" customClass="NewViewController" customModule="UICollectionViewDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bNW-Mv-Jvm"/>
+                        <viewControllerLayoutGuide type="bottom" id="YgM-ts-fIn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="RXT-Ex-b2j">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bm0-pf-NXh">
+                                <rect key="frame" x="0.0" y="64" width="375" height="501"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="JBd-mV-hji"/>
+                                    <constraint firstAttribute="height" constant="501" id="sbb-i0-9CK"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="bm0-pf-NXh" firstAttribute="top" secondItem="bNW-Mv-Jvm" secondAttribute="bottom" id="1Kf-ts-xha"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="bm0-pf-NXh" secondAttribute="leading" constant="16" id="BFF-gM-BQz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bm0-pf-NXh" secondAttribute="trailing" constant="-16" id="H8G-db-rNW"/>
+                            <constraint firstItem="YgM-ts-fIn" firstAttribute="top" secondItem="bm0-pf-NXh" secondAttribute="bottom" constant="102" id="Iny-8m-yxr"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="bm0-pf-NXh" id="dL6-Vd-NSC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YoJ-fV-QU0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1805.5999999999999" y="123.68815592203899"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="sgZ-St-eso">
@@ -102,7 +132,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Lj-Dy-PJx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="116" y="777.66116941529242"/>
+            <point key="canvasLocation" x="335" y="124"/>
         </scene>
     </scenes>
 </document>
