--- a/UICollectionViewDemo/Base.lproj/Main.storyboard
+++ b/UICollectionViewDemo/Base.lproj/Main.storyboard
@@ -42,17 +42,29 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="toE-gB-Fl0">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="301"/>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JMf-kW-l9I">
+                                                    <rect key="frame" x="167" y="260" width="42" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="XsE-Nf-ixp"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                         </view>
                                         <constraints>
+                                            <constraint firstAttribute="bottomMargin" secondItem="JMf-kW-l9I" secondAttribute="bottom" constant="3" id="0Nt-hD-AAD"/>
                                             <constraint firstAttribute="bottom" secondItem="toE-gB-Fl0" secondAttribute="bottom" id="IDG-Wa-hHB"/>
                                             <constraint firstItem="toE-gB-Fl0" firstAttribute="top" secondItem="gQG-33-f5V" secondAttribute="top" id="MSx-w8-s6J"/>
+                                            <constraint firstItem="JMf-kW-l9I" firstAttribute="centerX" secondItem="gQG-33-f5V" secondAttribute="centerX" id="cRa-59-f7E"/>
                                             <constraint firstAttribute="trailing" secondItem="toE-gB-Fl0" secondAttribute="trailing" id="dqj-x9-MFj"/>
                                             <constraint firstItem="toE-gB-Fl0" firstAttribute="leading" secondItem="gQG-33-f5V" secondAttribute="leading" id="w49-MM-x8u"/>
                                         </constraints>
                                         <size key="customSize" width="375" height="301"/>
                                         <connections>
                                             <outlet property="imageView" destination="toE-gB-Fl0" id="rzh-Ow-Ixl"/>
+                                            <outlet property="textLabel" destination="JMf-kW-l9I" id="zhl-qZ-Jhm"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -73,7 +85,7 @@
                     <navigationItem key="navigationItem" id="fDt-1i-heb"/>
                     <connections>
                         <outlet property="collectionView" destination="z8I-nf-ags" id="pC3-uZ-Hco"/>
-                        <segue destination="25h-pQ-8CH" kind="show" id="cP5-zo-fcb"/>
+                        <segue destination="25h-pQ-8CH" kind="show" identifier="showImage" id="cP5-zo-fcb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -92,21 +104,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bm0-pf-NXh">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bm0-pf-NXh">
                                 <rect key="frame" x="0.0" y="64" width="375" height="501"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="375" id="JBd-mV-hji"/>
-                                    <constraint firstAttribute="height" constant="501" id="sbb-i0-9CK"/>
-                                </constraints>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="bm0-pf-NXh" firstAttribute="top" secondItem="bNW-Mv-Jvm" secondAttribute="bottom" id="1Kf-ts-xha"/>
-                            <constraint firstAttribute="leadingMargin" secondItem="bm0-pf-NXh" secondAttribute="leading" constant="16" id="BFF-gM-BQz"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="bm0-pf-NXh" secondAttribute="trailing" constant="-16" id="H8G-db-rNW"/>
-                            <constraint firstItem="YgM-ts-fIn" firstAttribute="top" secondItem="bm0-pf-NXh" secondAttribute="bottom" constant="102" id="Iny-8m-yxr"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="imageView" destination="bm0-pf-NXh" id="dL6-Vd-NSC"/>
