--- a/UICollectionViewDemo/Base.lproj/Main.storyboard
+++ b/UICollectionViewDemo/Base.lproj/Main.storyboard
@@ -25,8 +25,8 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="z8I-nf-ags">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="9DR-5e-WQj">
-                                    <size key="itemSize" width="367" height="301"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="HnN-v7-rlf">
+                                    <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -42,26 +42,25 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="toE-gB-Fl0">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="301"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="19" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JMf-kW-l9I">
-                                                    <rect key="frame" x="8" y="260" width="359" height="30"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text goes here" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JMf-kW-l9I">
+                                                    <rect key="frame" x="131.5" y="262" width="113" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="fFE-xO-WFK"/>
+                                                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="300" id="fMi-ft-cjK"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="tzv-P0-Xdz"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" red="0.9461339910833334" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstAttribute="trailingMargin" secondItem="JMf-kW-l9I" secondAttribute="trailing" id="17d-qj-7jI"/>
-                                            <constraint firstItem="JMf-kW-l9I" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gQG-33-f5V" secondAttribute="topMargin" id="3q8-0V-WSu"/>
                                             <constraint firstAttribute="bottom" secondItem="toE-gB-Fl0" secondAttribute="bottom" id="IDG-Wa-hHB"/>
                                             <constraint firstItem="toE-gB-Fl0" firstAttribute="top" secondItem="gQG-33-f5V" secondAttribute="top" id="MSx-w8-s6J"/>
-                                            <constraint firstItem="JMf-kW-l9I" firstAttribute="centerX" secondItem="gQG-33-f5V" secondAttribute="centerX" id="Rrr-zr-8fo"/>
+                                            <constraint firstItem="JMf-kW-l9I" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gQG-33-f5V" secondAttribute="topMargin" constant="10" id="TaV-26-eBU"/>
+                                            <constraint firstItem="JMf-kW-l9I" firstAttribute="centerX" secondItem="gQG-33-f5V" secondAttribute="centerX" id="akv-SS-954"/>
                                             <constraint firstAttribute="trailing" secondItem="toE-gB-Fl0" secondAttribute="trailing" id="dqj-x9-MFj"/>
-                                            <constraint firstItem="JMf-kW-l9I" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="gQG-33-f5V" secondAttribute="leadingMargin" id="e4D-Fl-R5f"/>
-                                            <constraint firstAttribute="bottomMargin" secondItem="JMf-kW-l9I" secondAttribute="bottom" constant="3" id="gL7-oa-XJl"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="JMf-kW-l9I" secondAttribute="bottom" constant="1" id="mH5-oI-ciH"/>
                                             <constraint firstItem="toE-gB-Fl0" firstAttribute="leading" secondItem="gQG-33-f5V" secondAttribute="leading" id="w49-MM-x8u"/>
                                         </constraints>
                                         <size key="customSize" width="375" height="301"/>
@@ -77,7 +76,7 @@
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="z8I-nf-ags" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1w6-Gy-lGp"/>
                             <constraint firstItem="z8I-nf-ags" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="DZF-en-nNo"/>
